2009-07-30  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Initialize HTML5 Application Cache for QtWebKit to a sensible default
        https://bugs.webkit.org/show_bug.cgi?id=27866

        * Api/qwebpage.cpp:
        (initializeApplicationCachePathIfNecessary):
        (QWebPagePrivate::QWebPagePrivate):

2009-07-31  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

        Reviewed by Adam Treat.

        Build QtWebKit without benchmark tests for Qt < 4.5.
        https://bugs.webkit.org/show_bug.cgi?id=27886

        The QBENCHMARK macro is only available from 4.5 on,
        so builds for Qt < 4.5 shouldn't try to build those.

        * tests/tests.pro:

2009-07-31  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Fix warning by migrating use of QString.sprintf(...) to
        QString.arg().arg()...

        * WebCoreSupport/EditorClientQt.cpp:
        (dumpRange):

2009-07-31  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Expose the Offline Web Application Cache in the Qt API.

        * Api/qwebsettings.cpp:
        (QWebSettings::QWebSettings):
        (QWebSettings::setOfflineWebApplicationCachePath):
        (QWebSettings::offlineWebApplicationCachePath):
        (QWebSettings::setOfflineWebApplicationCacheQuota):
        (QWebSettings::offlineWebApplicationCacheQuota):
        * Api/qwebsettings.h:

2009-07-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Add missing Q_OBJECT to class inheriting from QObject.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-07-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Fix indentation.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-07-30  Volker Hilsheimer <volker.hilsheimer@nokia.com>

        Reviewed by Simon Hausmann.

        Fix documentation links to examples.
