@@ -414,6 +414,18 @@ private:
 
 #include "main.moc"
 
+int launcherMain(const QApplication& app)
+{
+#ifndef NDEBUG
+    int retVal = app.exec();
+    qt_drt_garbageCollector_collect();
+    QWebSettings::clearMemoryCaches();
+    return retVal;
+#else
+    return app.exec();
+#endif
+}
+
 int main(int argc, char **argv)
 {
     QApplication app(argc, argv);
@@ -446,7 +458,7 @@ int main(int argc, char **argv)
         QObject::connect(view, SIGNAL(loadFinished(bool)), &loader, SLOT(loadNext()));
         loader.loadNext();
         window->show();
-        return app.exec();
+        launcherMain(app);
     } else {
         if (args.count() > 1)
             url = args.at(1);
@@ -458,13 +470,6 @@ int main(int argc, char **argv)
             window->newWindow(args.at(i));
 
         window->show();
-#ifndef NDEBUG
-        int retVal = app.exec();
-        qt_drt_garbageCollector_collect();
-        QWebSettings::clearMemoryCaches();
-        return retVal;
-#else
-        return app.exec();
-#endif
+        launcherMain(app);
     }
 }
